# capydi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dev  externis_fix.patch
.github/workflow/: run_uts.yml
.github/workflows/: _paths.yml  generate_docs.yml  publish_benchmarks.yml  run_boost_uts.yml  run_uts.yml
0_root/: CMakeLists.txt
0_root/include/: Container.hpp
0_root/include/capydi/: Container.hpp  Error.hpp  KeyResolver.hpp  MainPage.hpp  Resolution.hpp
0_root/include/capydi/configs/: ConfigClassifier.hpp  ConfigType.hpp
0_root/include/capydi/dispatchers/: ChainableConfigDispatcher.hpp  CreationalConfigDispatcher.hpp
0_root/include/capydi/utilities/: Rebind.hpp  SelfType.hpp
0_root/include/configs/: Constleton.hpp  README.md  Singleton.hpp
0_root/include/utilities/: Filter.hpp  Head.hpp  None.hpp  PackAlgorithm.hpp  Prepend.hpp
0_root/include/utilities/referencing/: RuntimeRef.hpp
9_testing/: CMakeLists.txt
9_testing/include/testing/hierarchies/: SpineLeaf3.hpp
9_testing/src/di/: basic.cpp
9_testing/src/di/configs/: Tag.cpp
9_testing/src/di/lifetimes/: singleton.cpp
9_testing/src/di/resolution/: Constleton.cpp  Singleton.cpp
benchmarks/: CMakeLists.txt
benchmarks/src/: filter.cpp  meta_map.cpp
core/: CMakeLists.txt
core/capymeta/: CMakeLists.txt
core/capymeta/include/capymeta/: MetaFunctor.hpp  Overload.hpp  Rebind.hpp
core/capymeta/include/capymeta/algorithms/general/: Rebind.hpp
core/capymeta/include/capymeta/algorithms/pack/: Append.hpp  Concat.hpp  Contains.hpp  Filter.hpp  FilterMap.hpp  Find.hpp  FunctionTraits.hpp  Head.hpp  Map.hpp  PackAlgorithm.hpp  PackConcat.hpp  PackMap.hpp  PackZip.hpp  Prepend.hpp  ValuedPackFor.hpp  Zip.hpp
core/capymeta/include/capymeta/algorithms/pack/legacy/: Append.hpp  Filter.hpp  FilterMap.hpp  Head.hpp  PackConcat.hpp  PackMap.hpp  PackZip.hpp  Prepend.hpp
core/capymeta/include/capymeta/common/: BoostMP11Adapter.hpp
core/capymeta/include/capymeta/concepts/: MetaCallable.hpp  Trait.hpp  WrappedWIth.hpp
core/capymeta/include/capymeta/pack/: Append.hpp  Filter.hpp  FilterMap.hpp  FunctionTraits.hpp  Head.hpp  Maybe.hpp  PackAlgorithm.hpp  PackConcat.hpp  PackMap.hpp  PackZip.hpp  Prepend.hpp
core/capymeta/include/capymeta/primitives/: FixTemplateArity.hpp  FixTemplateMetaArity.hpp  Functor.hpp  MetaArity.hpp  MetaFunctor.hpp  Metafunction.hpp  Overload.hpp  Pack.hpp  Template.hpp
core/capymeta/include/capymeta/primitives/referencing/: ConstexprRef.hpp  Reference.hpp  RuntimeRef.hpp
core/capymeta/include/capymeta/type_structures/: Maybe.hpp  MetaMap.hpp  StaticEither.hpp  StaticMaybe.hpp
core/root/: CMakeLists.txt
core/root/include/capydi/: Container.hpp  DependenciesInfo.hpp  Error.hpp  KeyResolver.hpp  MainPage.hpp  Resolution.hpp
core/root/include/capydi/configs/: ConfigClassifier.hpp  ConfigType.hpp  ResolutionOverrides.hpp
core/root/include/capydi/configs/chainable/: Decorator.hpp
core/root/include/capydi/configs/concepts/: ChainableConfig.hpp  CreationalConfig.hpp  DiConfig.hpp
core/root/include/capydi/configs/creational/: Constleton.hpp  Singleton.hpp
core/root/include/capydi/configs/decorative/: DependencyTags.hpp  Interface.hpp  Tag.hpp
core/root/include/capydi/configs/inputs/: NoInput.hpp  RequiredFieldsUsageValidator.hpp  TagInput.hpp
core/root/include/capydi/dispatchers/: ChainableConfigDispatcher.hpp  CreationalConfigDispatcher.hpp
core/root/include/capydi/referencing/: ConstexprRef.hpp  RuntimeRef.hpp
core/root/include/capydi/utilities/: IndexSequenceAsPack.hpp  MetaFunctor.hpp  Overload.hpp  Rebind.hpp
core/root/include/capydi/utilities/pack/: Append.hpp  FilterMap.hpp  Head.hpp  Maybe.hpp  None.hpp  Pack.hpp  PackAlgorithm.hpp  PackConcat.hpp  PackContains.hpp  PackZip.hpp
core/root/include/capydi/utilities/referencing/: ConstexprRef.hpp  RuntimeRef.hpp
docker/: Dockerfile.dev  docker-compose-dev.yml
docs/: Doxyfile  Doxyfile.bak
make/: Makefile.docker.mk  Makefile.native.mk
make/constants/: Constants.mk  DockerBuildDir.mk  DockerConstants.mk  Flags.mk  NativeBuildDir.mk  NativeConstants.mk
make/utilities/: OpenDocs.mk
scripts/: install_prerequisites.sh  verify_platform.sh
scripts/prerequisites/: install_doxygen.sh  install_externis.sh
testing/: CMakeLists.txt
testing/include/testing/hierarchies/: ConstSpineLeaf3.hpp  MixedSpineLeaf4.hpp  SpineLeaf3.hpp
testing/src/: MetaMap.cpp  Utilities.cpp
testing/src/configs/chainable/: DecoratorInterface.cpp
testing/src/configs/creational/: Constleton.cpp  Singleton.cpp
testing/src/configs/decorative/: Tag.cpp
testing/src/configs/inputs/: inputs.cpp
testing/src/configs/mixed/: SingletonConstleton.cpp
testing/src/di/resolution/: Constleton.cpp  Decorator.cpp  MixedConfigs.cpp  Singleton.cpp
(+19 files in other folders)
